--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,9 @@
 title : Customer Segmentation with KMeans Clustering
 theme : jekyll-theme-minimal
+markdown: kramdown
+kramdown:
+  input: GFM
+  math_engine: mathjax
+  math_engine_opts:
+    # If you are using MathJax CDN
+    server: https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js
